2006-06-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* package_rpm.tcl:                  Moved, and new location
	* support/releases/package_rpm.tcl: of the file.

	* package_yml.tcl:                  Moved, and new location
	* support/releases/package_yml.tcl: of the file.

	* package_tip55.tcl:                  Moved, and new location
	* support/releases/package_tip55.tcl: of the file.

	* sak.tcl:       Updated to the new location of
	* installer.tcl: package_rpm.tcl, package_tip55.tcl,
	                 package_yml.tcl

	* package_version.tcl:              Moved, and new location
	* support/installation/version.tcl: of the file.

	* sak.tcl:       Updated to the new location of
	* installer.tcl: package_version.tcl
	
	* install_action.tcl:               Moved, and new location
	* support/installation/actions.tcl: of the file.

	* installed_modules.tcl:            Moved, and new location
	* support/installation/modules.tcl: of the file.

	* sak.tcl:       Updated to the new location of
	* installer.tcl: install_action.tcl, installed_modules.tcl.

	* README.developer:  New files to introduce new developers
	* README.releasemgr: and release managers to Tcllib, the tools
	  available to support and ease their tasks, the procedures we
	  have in place, etc. For now they are more or less placeholders,
	  to be fleshed out with actual content over time.

	* installed_modules.tcl: Registered new module 'nmea'.

	* PACKAGES: Moved.
	* support/releases/PACKAGES: New location of PACKAGES.
	* sak.tcl: Updated to the new location of PACKAGES.

2006-06-30  Andreas Kupries <andreask@activestate.com>

	* installed_modules.tcl: Changed to a declarative style (more
	  amenable to automated processing).

2006-06-15  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: Extended to allow the specification of a module M as
	  either M or modules/M. The latter is a path relative to the
	  topdir and enables the entering of modules through